fix: repair z-index

--- a/src/pages/packages/components/SearchPlace/index.scss
+++ b/src/pages/packages/components/SearchPlace/index.scss
@@ -8,6 +8,8 @@
   justify-content: space-between;
   gap: 1em;
   width: 130%;
+  position: relative;
+  z-index: 10;
 
   div {
     line-height: 2.2em;
