--- a/src/pages/packages/index.scss
+++ b/src/pages/packages/index.scss
@@ -59,7 +59,6 @@
   .package-container {
     height: 100vh;
     width: 50%;
-    z-index: -1;
     position: relative;
 
     .image-place {
